--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <section id="begining">
         <div class="welcome">
-            <image id="bp" src=""></image>
+            <image id="bp" src="Poster for a donation drive (1).jpg"></image>
             <h1>This web is about<br>donation<br></h1>
         </div>
     </section>
