--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="begining">
         <div class="welcome">
             <image id="bp" src="Poster for a donation drive (1).jpg"></image>
-            <h1>This web is about<br>donation<br></h1>
+            <h1>This web is about<br>donat<br></h1>
         </div>
     </section>
     <section id="bio">
